src/test/deca/context/invalid/created/binary_exp/op_arith/mult_true_null.deca
// Description :
//    test mult entre un true et un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.33) L’opérande gauche est de type true, L’opérande droite est de type null. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur *
class A{}
{
A a = new A();
int c = true * null;
}
